# vibegame

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.devcontainer/: devcontainer.json
src/vibegame/: __init__.py  __main__.py  game.py  main.py  settings.py  team.py
src/vibegame/actions/: __init__.py  attack.py  base.py  negotiate.py
src/vibegame/ai/: __init__.py  controller.py
src/vibegame/ui/: __init__.py  animation.py  layout.py  renderer.py
src/vibegame/world/: __init__.py  map.py  territory.py
tests/: __init__.py  test_ai.py  test_animation.py  test_attack.py  test_game.py  test_map.py  test_negotiate.py  test_stat_interactions.py  test_team.py  test_territory.py
